# haskellToys

./: .gitignore  .travis.yml  README.md  appveyor.yml  azure-pipelines.yml  encodings.txt  input.txt  input2.txt  local.css  makeGraph.sh  makeStructure.sh  package.yaml  parse4s.cabal  stack.yaml  stack.yaml.old  testParse.cabal
.azure/: azure-linux-template.yml  azure-osx-template.yml  azure-windows-template.yml
app/: Main.hs
spec/: resources.txt
src/: AST.hs  CLIOptionsLayer.hs  ImageLinks.hs  Inline.hs  InlineSpace.hs  Lib.hs  MeltingPot.hs  OptionsCLI.hs  PermutationTest.hs  Q2.hs  QNumber.hs  Qs.hs  StringWorks.hs  Tech.hs  Tokens.hs  Version.hs
src/Constants/: StringWorks.hs
src/Parsers/: Debug.hs  Field.hs  Header.hs  ImageLinks.hs  Inline.hs  InlineSpace.hs  Lines.hs  Primitives.hs  QN.hs  Question.hs  Tech.hs  Tokens.hs
src/Render/: StringWorks.hs
src/Render/Html/: Rend.hs  Tech.hs
src/Structures/: Composers.hs  Header.hs  Lines.hs  QNumber.hs  Quest.hs  Words.hs
src/Tokens/: Parser.hs  Tech.hs  Tokens.hs
test/: DecimalSpec.hs  HeaderSpec.hs  Helpers.hs  HogDecimalTest.hs  HogHeaderTest.hs  HumanReadableSpec.hs  ImageLinkSpec.hs  InlineSpec.hs  InlineStructSpec.hs  JQSpec.hs  JQwLSpec.hs  LineSpec.hs  Main.hs  QFTSpec.hs  QNSpec.hs  Spec.hs
test/inputs/: input2.txt
