name:                parse4s
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ShrykeWindgrace/haskellToys#readme
license:             BSD3
license-file:        LICENSE
author:              TZ
maintainer:          tz@academ.email
copyright:           2017
category:            parsing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:      MeltingPot
                      , Parsers.ImageLinks
                      , Parsers.Inline
                      , Structures.QNumber
                      , CLIOptionsLayer
                      , Version
                      , Parsers.InlineSpace
                      , Parsers.Tech
                      , Parsers.QN
                      , Structures.Words
                      , Structures.Lines
                      , Structures.Quest
  other-modules:        Render.StringWorks
                      , Parsers.Tokens
  build-depends:       base >= 4.7 && < 5
                      , parsec
                      , optparse-applicative
  default-language:    Haskell2010

executable parse4s-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parse4s
                     , parsec >= 3.1.11
                     , optparse-applicative >= 0.13.2.0
  default-language:    Haskell2010

test-suite parse4s-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ImageLinkSpec
                     , InlineStructSpec
                     , DecimalSpec
                     , Helpers
  build-depends:       base
                      , parse4s
                      , parsec >= 3.1.11
                      , hspec 
                      , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ShrykeWindgrace/haskellToys
